feedback fixes: added tel and mailto, fixes letter-spacing, set the size for h2 according to the layout

--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@ body {
   color: var(--text-color);
   font-size: 14px;
   letter-spacing: normal;
+  line-height: normal;
 }
 
 .text26-bold {
   font-size: 26px;
   font-weight: 700;
   letter-spacing: 0.03em;
-  line-height: normal;
   font-family: "Raleway", sans-serif;
 }
 
@@ -55,7 +55,6 @@ body {
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 0.03em;
-  line-height: normal;
 }
 
 .company-description-text {
@@ -88,29 +87,31 @@ body {
   font-size: 36px;
   font-weight: 700;
   letter-spacing: 0.03em;
-  line-height: normal;
 }
 
 .team-member-name {
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.03em;
-  line-height: normal;
 }
 
 .team-member-job-title {
   font-size: 16px;
   color: var(--secondary-text-color);
   letter-spacing: 0.03em;
-  line-height: normal;
 }
 
 button {
   cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
   border: 0;
   font-family: "Roboto", sans-serif;
+}
+
+.btn-type-business {
+  letter-spacing: 0.03em;
+  line-height: calc(26 / 16);
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .btn-order-service {
@@ -118,12 +119,12 @@ button {
   color: #ffffff;
   background-color: var(--accent-color);
   font-size: 16px;
+  letter-spacing: 0.06em;
 }
 
 a {
   text-decoration: none;
   color: var(--text-color);
-  line-height: normal;
   letter-spacing: 0.02em;
 }
 
